# otus-cpp-pro-hw

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: docs.yaml  release.yml
scripts/: build-helper.sh  build.sh
src/: CMakeLists.txt  arena_allocator.h  editor.cpp  ip_filter.cpp  ip_tools.h  main.cpp  print_ip.h  print_ip_app.cpp  simple_allocator.cpp  simple_vector.h
src/commands/: commands.cpp  commands.h  icommands.h
src/common/: id_generator.cpp  id_generator.h
src/ctrl/: editor_controller.cpp  editor_controller.h
src/model/: document.cpp  document.h  serializer.cpp  serializer.h
src/model/shapes/: line.cpp  line.h  rectangle.cpp  rectangle.h  shape.h  shape_factory.cpp  shape_factory.h
src/version/: lib_version.cpp
tests/: CMakeLists.txt
tests/boost/: CMakeLists.txt  test_ip_tools.cpp  test_version.cpp
tests/gtest/: CMakeLists.txt  test_arena_allocator.cpp  test_editor.cpp  test_ip_tools.cpp  test_print_ip.cpp  test_simple_vector.cpp  test_version.cpp
